--- a/css/index.css
+++ b/css/index.css
@@ -4,12 +4,14 @@
 /* imports */
 @import url("./fonts/fonts.css");
 
+
 /* global variables */
 :root {
     --white: #fff;
     --black: #000;
-    --backgroundBlack: #333333;
+    --backgroundBlack: #252525;
     --red: #ff0000;
+    --blue: #0000ff;
     --light-grey: #eae7e6;
     --dark-grey: #57605f;
     --orange: #bf5700;
@@ -17,32 +19,33 @@
     --shadow-color: #000000aa;
 }
 
+
 /* presets */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+
+    font-family: 'opensans_regular', sans-serif, Roboto;
 }
 
 
-
 body {
-    background-color: var(--white);
-    font-family: 'opensans_regular', sans-serif, Roboto;
+    background-color: var(--backgroundBlack);
+    color: var(--light-grey);
 }
 
 
 /* Header 
 ------------------------------------------------------------------------------- */
 header {
-    border-bottom: 1px solid #000;
+    border: none;
 }
 
 .banner {
-    background-color: var(--white);
-    margin: 5px;
+    margin: 5px 5px 2em 5px;
     padding: 1px;
-
+    
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -57,56 +60,80 @@ header {
 
 /* FIXME: left */
 #bannerLeft {
-    border: 2px solid var(--red);
-    flex-grow: 1;
+    justify-content: flex-start;
+    flex: 1;
+
+    /* border: 2px solid var(--blue); */ 
 }
 
 #logo {
+    display: block;
     max-width: 50px;
     max-height: 50px;
-    border: 2px solid var(--red);
+    
+    /* border: 2px solid var(--blue); */
 }
 
 #name {
-    margin: 2px;
-    font-size: 25px;
-    border: 2px solid var(--red);
+    margin: 5px;
+    font: 18px 'opensans_semibold-italic';
+    letter-spacing: 1px;
+    color: var(--black);
+    /* border: 2px solid var(--blue); */
 }
 
 
 /* FIXME: middle */
 #bannerMiddle {
-    border: 2px solid var(--red);
-    flex-grow: 3;
+    flex: 2;
+
+    /* border: 2px solid var(--blue); */
 }
 
 .navigation {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     flex-direction: row;
 
     list-style: none;
+    width: 100%;
+    max-width: 600px;
     margin: 2px;
 }
 
 .navigation a {
     text-decoration: none;
-    font: 14px 'opensans_bold';
+    font: 15px 'opensans_bold';
+    text-transform: uppercase;
+    letter-spacing: 1px;
     display: block;
-    padding: 1em;
-    color: #000;
+    padding: 1px;
+    color: var(--black);
 }
   
 .navigation a:hover {
-    background: var(--orange);
+    color: var(--orange);
+    /* background: var(--light-grey); */
 }
 
 /* FIXME: right */
 #bannerRight {
-    border: 2px solid var(--red);
-    flex-grow: 1;
+    justify-content: flex-end;
+    flex: 1;
+
+    /* border: 2px solid var(--blue); */
 }
 
+#bannerRight a {
+    text-decoration: none;
+    font: 14px 'opensans_bold';
+    color: var(--black);
+}
+
+#bannerRight a:hover {
+    color: var(--orange);
+    /* background: var(--light-grey); */
+}
 
 /* Main Content
 ------------------------------------------------------------------------------- */
@@ -115,7 +142,7 @@ header {
     align-items: center;
     flex-direction: column;
     
-    max-width: 900px;
+    max-width: 850px;
     margin: 1px auto;
     padding: 1px;
 }
@@ -142,4 +169,12 @@ footer {
     padding: 1em;
     border-top: 2px solid var(--black);
     text-align: center;
+}
+
+footer a {
+    color: var(--light-grey);
+}
+
+footer a:hover {
+    color: var(--orange);
 }
