background image fix

--- a/css/index.css
+++ b/css/index.css
@@ -154,7 +154,7 @@ header {
     width: 100%;
     min-height: 800px;
 
-    background-image: url(../data/images/ship_stars_edited.jpg);
+    background-image: url(../data/ship_stars_edited.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
