--- a/css/index.css
+++ b/css/index.css
@@ -171,14 +171,18 @@ header {
 ------------------------------------------------------------------------------- */
 
 #aboutMe {
-  height: 600px;
-  padding: 4em 0 4em 0;
+  min-height: 600px;
+  padding: 4em auto 4em auto;
+
   /* border: 2px solid red; */
 }
 
 .aboutMe_content {
   display: flex;
   flex-direction: row;
+  justify-content: space-evenly;
+  margin: 0em auto 0em auto;
+  max-width: 1400px;
 
   /* border: 2px solid green; */
 }
@@ -186,21 +190,21 @@ header {
 .profile_pic {
   width: 12em;
   height: 12em;
-  margin: 4em 6em 0 6em;
+  margin: 4em 0em 0 6em;
   border: 1rem solid rgba(255, 255, 255, 0.02);
   border-radius: 50%;
 }
 
 #aboutMe_content_text {
   height: inherit;
+  max-width: 700px;
+  min-width: 350px;
   width: auto;
 
   display: flex;
   flex-direction: column;
-  margin: 0 12em 0 0em;
+  margin: 0 0em 0 0em;
   padding: 1em;
-
-  /* border: 2px solid blue; */
 }
 
 /* Projects Section
