--- a/css/index.css
+++ b/css/index.css
@@ -199,7 +199,7 @@ header {
   max-width: 700px;
   min-width: 350px;
   width: auto;
-  
+
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -225,6 +225,7 @@ hr {
 #projects {
   min-height: 800px;
   margin: 1em 0 6em 0;
+  /* background-color: #111111; */
 }
 
 .projects_content {
@@ -246,7 +247,7 @@ hr {
 .project_cards_grid .card {
   position: relative;
   cursor: pointer;
-  padding: 1em .5em;
+  padding: 1em 0.5em;
 }
 
 .project_cards_grid .card .box {
@@ -330,39 +331,7 @@ hr {
   color: #fff;
 }
 
-/* Resume Section
-------------------------------------------------------------------------------- */
-#resume {
-  min-height: min-content;
-  max-height: fit-content;
-
-  max-width: 800px;
-  margin: 1em auto 3em auto;
-  /* border: 2px solid red; */
-}
-
-.resume_content {
-  text-align: center;
-  /* border: 2px solid green; */
-}
-
-.resume_content p {
-  padding: 1em;
-  margin-bottom: 2em;
-  text-align: center;
-  font-size: 18px;
-  font-family: "opensans_regular";
-  letter-spacing: 1px;
-}
-
-.resume_content h4 {
-  margin-bottom: 0.5em;
-  text-align: center;
-  font-size: 20px;
-  font-family: "opensans_regular";
-  letter-spacing: 1px;
-}
-
+/* Skill Boxes */
 .skills_wrapper {
   display: inline-flex;
   justify-content: center;
@@ -514,6 +483,210 @@ hr {
 .skills_wrapper .database:hover .tooltip::before {
   background-color: #f34f29;
   color: #ffffff;
+}
+
+/* Resume Section
+------------------------------------------------------------------------------- */
+#resume {
+  min-height: min-content;
+  max-height: fit-content;
+
+  /* background-color: #111111; */
+  margin: 1em auto 3em auto;
+  /* padding: 1em 2em; */
+  /* border: 2px solid orange; */
+}
+
+.resume_content {
+  text-align: center;
+  /* border: 2px solid green; */
+}
+
+.resume_content p {
+  padding: 1em;
+  margin-bottom: 2em;
+  text-align: center;
+  font-size: 18px;
+  font-family: "opensans_regular";
+  letter-spacing: 1px;
+}
+
+.resume_content h4 {
+  margin-bottom: 0.5em;
+  text-align: center;
+  font-size: 20px;
+  font-family: "opensans_regular";
+  letter-spacing: 1px;
+}
+
+/* Timeline */
+.timeline_container {
+  min-height: 100vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 1em 0;
+}
+
+.timeline {
+  width: 80%;
+  height: auto;
+  max-width: 1200px;
+  margin: 0 auto;
+  position: relative;
+}
+
+.timeline ul {
+  list-style: none;
+}
+
+.timeline ul li {
+  transition: all 0.3s cubic-bezier(0.65, 0.05, 0.36, 1);
+  padding: 20px;
+  background-color: #1e1f22;
+  color: white;
+  border-radius: 10px;
+  margin-bottom: 20px;
+  position: relative;
+}
+
+/* Timeline Images */
+#item1:after {
+  background-image: url(../data/icons/005-work-in-progress.png);
+}
+
+#item2:after {
+  background-image: url(../data/icons/005-work-in-progress.png);
+}
+
+#item2:after {
+  background-image: url(../data/icons/005-work-in-progress.png);
+}
+
+#item3:after {
+  background-image: url(../data/icons/005-work-in-progress.png);
+}
+
+#item4:after {
+  background-image: url(../data/icons/005-work-in-progress.png);
+}
+
+#item5:after {
+  background-image: url(../data/icons/005-work-in-progress.png);
+}
+
+#item6:after {
+  background-image: url(../data/icons/005-work-in-progress.png);
+}
+
+.timeline ul li:after {
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center center;
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
+  transition: opacity 1s ease-in-out;
+}
+
+.timeline ul li:hover:after {
+  opacity: 1;
+}
+
+.timeline ul li:last-child {
+  margin-bottom: 0;
+}
+
+.timeline-content h1 {
+  font-weight: 500;
+  font-size: 25px;
+  line-height: 30px;
+  margin-bottom: 10px;
+}
+
+.timeline-content p {
+  font-size: 16px;
+  line-height: 30px;
+  font-weight: 300;
+}
+
+.timeline-content .date {
+  font-size: 12px;
+  font-weight: 300;
+  margin-bottom: 10px;
+  letter-spacing: 2px;
+}
+
+@media only screen and (min-width: 768px) {
+  .timeline:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 2px;
+    height: 100%;
+    background-color: #292929;
+  }
+
+  .timeline ul li {
+    width: 50%;
+    position: relative;
+    margin-bottom: 50px;
+    opacity: 1;
+  }
+
+  .timeline ul li:nth-child(odd) {
+    float: left;
+    clear: right;
+    transform: translateX(-30px);
+    border-radius: 20px 0px 20px 20px;
+  }
+
+  .timeline ul li:nth-child(even) {
+    float: right;
+    clear: left;
+    transform: translateX(30px);
+    border-radius: 0px 20px 20px 20px;
+  }
+
+  .timeline ul li::before {
+    transition: all 0.4s cubic-bezier(0.65, 0.05, 0.36, 1);
+    content: "";
+    position: absolute;
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    background-color: gray;
+    top: 0px;
+  }
+
+  .timeline ul li:nth-child(odd)::before {
+    transform: translate(50%, -50%);
+    right: -30px;
+  }
+
+  .timeline ul li:nth-child(even)::before {
+    transform: translate(-50%, -50%);
+    left: -30px;
+  }
+
+  .timeline-content .date {
+    position: absolute;
+    top: -30px;
+  }
+
+  .timeline ul li:hover::before {
+    background-color: #bf5700;
+    height: 25px;
+    width: 25px;
+  }
 }
 
 /* Footer
